0.6.2.95
Copy-alSourceFiles to support using the same path and/or name for layout as report (*\name.rdlc, *.rdlc or *\..\layouts\*.rdlc)

0.6.2.94
Ignore SQL Errors when using -assignpremiumplan
New-NavContainer will populate the shared program files folder if it is empty (not if not restarting) to allow starting a saved image
Sort should default to None and dependency graph walking should avoid recursive loops

0.6.2.93
Copy-alSourceFiles will insert a sequence number if duplicate destination file names are detected
Switch to original behavior on importing testtoolkit if running Windows Authentication - the error is tied to UserPassword auth
Add parameter -sort to Get-BcContainerAppInfo to get apps sorted with dependencies first or last (for uninstalling etc.)
Remove "runtime" property from generated app.json to use latest
Support multitenancy for Publish-NewApplicationToBcContainer
Added parameter sourceDatabase to New-BcContainerTenant

0.6.2.92
Bugfix #549 -assignPremiumPlan doesn't work with 15.x containers
Issue #542 allow static IP for Setup-TraefikContainerForBcContainers
Issue #550 import testtoolkit destroys symbols in 14.x containers

0.6.2.91
Add parameter -runTxt2AlInContainer to New-NavContainer to allow a foreign container to perform the Txt2Al conversion when specifying -includeAL

0.6.2.9
Support AccessToken for AAD authentication in Get-TestsFromBcContainer and Run-TestsInBcContainer
Support using current AzureAD connection in Create-AadAppsForBc and Create-AadUsersInBcContainer
Support GUI flow in Create-AadAppsForBc and Create-AadUsersInBcContainer
Bug #526 Compile-AppInBcContainer cannot handle unicode characters and slashes in app.json

0.6.2.8
Get-TestsFromNavContainer and Run-TestsInNavContainer now supports NAV 2016, NAV 2017, NAV 2018 and Business Central.
Issue #528 - add SqlCredential to Generate-SymbolsInNavContainer
Support AccessToken as Office365Password instead of the AAD User Password (to allow MFA accounts)